--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Девайс</title>
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body class="inner-page">
   <header class="main-header">
@@ -14,9 +16,9 @@
         <button class="search-btn" type="submit">Найти</button>
       </form>
       <ul class="login-navigation">
-        <li class="login-navigation-item"><a class="login-link" href="#">Войти</a></li>
-        <li class="login-navigation-item" hidden><a class="profile-link" href="#">Валентин Петухов</a></li>
-        <li class="login-navigation-item" hidden><a class="logout-link" href="#">Выйти</a></li>
+        <li class="login-navigation-item"><a class="login-link hide" href="#">Войти</a></li>
+        <li class="login-navigation-item"><a class="profile-link" href="#">Валентин Петухов</a></li>
+        <li class="login-navigation-item"><a class="logout-link" href="#">Выйти</a></li>
       </ul>
       <a class="compare" href="#">Сравнить</a>
       <a class="cart" href="#">Корзина</a>
@@ -24,9 +26,9 @@
     <div class="bottom-header">
       <nav class="main-navigation">
         <ul class="site-navigation">
-          <li>
+          <li class="catalog-hover">
             <a href="catalog.html">Каталог товаров</a>
-            <div class="catalog-list" hidden>
+            <div class="catalog-list">
               <ul class="simple-devices">
                 <li><a href="#">Виртуальная реальность</a></li>
                 <li><a>Моноподы для селфи</a></li>
@@ -227,5 +229,9 @@
       <a href="#" class="academy-link"><img src="" alt="Html Academy"></a>
     </div>
   </footer>
+    <script>document.write('<script src="http://'
+    + (location.host || 'localhost').split(':')[0]
+    + ':35729/livereload.js?snipver=1"></'
+    + 'script>')</script>
 </body>
 </html>
