--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Девайс</title>
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
   <header class="main-header">
@@ -15,8 +17,8 @@
       </form>
       <ul class="login-navigation">
         <li class="login-navigation-item"><a class="login-link" href="#">Войти</a></li>
-        <li class="login-navigation-item" hidden><a class="profile-link" href="#">Валентин Петухов</a></li>
-        <li class="login-navigation-item" hidden><a class="logout-link" href="#">Выйти</a></li>
+        <li class="login-navigation-item hide"><a class="profile-link" href="#">Валентин Петухов</a></li>
+        <li class="login-navigation-item hide"><a class="logout-link" href="#">Выйти</a></li>
       </ul>
       <a class="compare" href="#">Сравнить</a>
       <a class="cart" href="#">Корзина</a>
@@ -24,9 +26,9 @@
     <div class="bottom-header">
       <nav class="main-navigation">
         <ul class="site-navigation">
-          <li>
-            <a href="catalog.html">Каталог товаров</a>
-            <div class="catalog-list" hidden>
+          <li class="catalog-hover">
+            <a href="#">Каталог товаров</a>
+            <div class="catalog-list">
               <ul class="simple-devices">
                 <li><a href="#">Виртуальная реальность</a></li>
                 <li><a href="catalog.html">Моноподы для селфи</a></li>
@@ -55,18 +57,18 @@
     <section class="slider">
       <ul class="slider-list">
         <li class="slider-item">
-          <img src="" alt="Палка для селфи">
+          <img src="img/img-slider-monopod.png" alt="Палка для селфи" width="384" height="486">
           <span>01</span>
-          <h2>Делай селфи, как Бен Стиллерш</h2>
+          <h2>Делай селфи, как Бен Стиллер!</h2>
           <p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
           <a href="#" class="btn more-btn">Подробнее</a>
           <table>
-            <tr>
+            <tr class="table-parameters">
               <td>8,5 м</td>
               <td>5 кг</td>
               <td>Карбон</td>
             </tr>
-            <tr>
+            <tr class="table-captions">
               <td>Длина палки</td>
               <td>Вес палки</td>
               <td>Материал</td>
@@ -74,32 +76,32 @@
           </table>
         </li>
         <li class="slider-item">
-          <img src="" alt="Фитнес-браслет">
+          <img src="img/img-slider-watch.png" alt="Фитнес-браслет" width="345" height="485">
           <span>02</span>
           <h2>Худеем правильно!</h2>
           <p>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
           <a href="#" class="btn more-btn">Подробнее</a>
           <table>
-            <tr>
+            <tr class="table-parameters">
               <td>48 часов</td>
             </tr>
-            <tr>
+            <tr class="table-captions">
               <td>Без подзарядки</td>
             </tr>
           </table>
         </li>
         <li class="slider-item">
-          <img src="" alt="Квадрокоптер">
+          <img src="img/img-slider-copter.png" alt="Квадрокоптер" width="526" height="334">
           <span>03</span>
           <h2>Порхает как бабочка, жалит как пчела!</h2>
           <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
           <a href="#" class="btn more-btn">Подробнее</a>
           <table>
-            <tr>
+            <tr class="table-parameters">
               <td>800 м</td>
               <td>50 м</td>
             </tr>
-            <tr>
+            <tr class="table-captions">
               <td>Дальность полета</td>
               <td>Радиус поражения</td>
             </tr>
@@ -112,27 +114,21 @@
       <h2 class="visually-hidden">Популярные категории</h2>
       <ul class="popular-list">
         <li class="popular-item"><a href="#">
-          <img src="" alt="Виртуальная реальность">
           <h3>Виртуальная реальность</h3>
         </a></li>
         <li class="popular-item"><a href="#">
-          <img src="" alt="Моноподы для селфи">
           <h3>Моноподы для селфи</h3>
         </a></li>
         <li class="popular-item"><a href="#">
-          <img src="" alt="Экшн-камеры">
           <h3>Экшн-камеры</h3>
         </a></li>
         <li class="popular-item"><a href="#">
-          <img src="" alt="Фитнес-браслеты">
           <h3>Фитнес-браслеты</h3>
         </a></li>
         <li class="popular-item"><a href="#">
-          <img src="" alt="Умные часы">
           <h3>Умные часы</h3>
         </a></li>
         <li class="popular-item"><a href="#">
-          <img src="" alt="Квадрокоптеры">
           <h3>Квадрокоптеры</h3>
         </a></li>
       </ul>
@@ -249,5 +245,9 @@
     <a href="map.html"><img src="" alt="Москва, улица Строителей, дом 15"></a>
     <button class="modal-close" type="button">Закрыть</button>
   </section>
+    <script>document.write('<script src="http://'
+    + (location.host || 'localhost').split(':')[0]
+    + ':35729/livereload.js?snipver=1"></'
+    + 'script>')</script>
 </body>
 </html>
