Доделал первичную стилизацию главной страницы

--- a/catalog.html
+++ b/catalog.html
@@ -202,9 +202,9 @@
     <div class="footer-top">
       <a class="main-footer-caption" href="index.html">Device</a>
       <ul class="login-navigation">
-        <li class="login-navigation-item"><a class="login-link" href="#">Войти</a></li>
-        <li class="login-navigation-item" hidden><a class="profile-link" href="#">Валентин Петухов</a></li>
-        <li class="login-navigation-item" hidden><a class="logout-link" href="#">Выйти</a></li>
+        <li class="login-navigation-item hide"><a class="login-link" href="#">Войти</a></li>
+        <li class="login-navigation-item"><a class="profile-link" href="#">Валентин Петухов</a></li>
+        <li class="login-navigation-item"><a class="logout-link" href="#">Выйти</a></li>
       </ul>
       <a href="#" class="compare">Сравнить</a>
       <a href="#" class="cart">Корзина</a>
@@ -226,7 +226,7 @@
         <li><a href="#" class="social-link"><span class="visually-hidden">Instagram</span></a></li>
         <li><a href="#" class="social-link"><span class="visually-hidden">Twitter</span></a></li>
       </ul>
-      <a href="#" class="academy-link"><img src="" alt="Html Academy"></a>
+      <a href="#" class="academy-link"><img src="img/logo-htmlacademy.svg" width="26.94" height="34.09" alt="Html Academy"></a>
     </div>
   </footer>
     <script>document.write('<script src="http://'
