--- a/index.html
+++ b/index.html
@@ -163,10 +163,10 @@
     <section class="brands">
       <h2 class="visually-hidden">Популярные бренды</h2>
       <ul class="brands-list">
-        <li><a href="#"><img src="" alt="DJI"></a></li>
-        <li><a href="#"><img src="" alt="SP Gadgets"></a></li>
-        <li><a href="#"><img src="" alt="GoPro"></a></li>
-        <li><a href="#"><img src="" alt="Vive"></a></li>
+        <li><a href="#"><img src="img/img-dji.png" alt="DJI" width="260" height="100"></a></li>
+        <li><a href="#"><img src="img/img-spgadgets.png" alt="SP Gadgets" width="260" height="100"></a></li>
+        <li><a href="#"><img src="img/img-gopro.png" alt="GoPro" width="260" height="100"></a></li>
+        <li><a href="#"><img src="img/img-vive.png" alt="Vive" width="260" height="100"></a></li>
       </ul>
     </section>
 
@@ -185,7 +185,7 @@
     <section class="contacts">
       <h2>Контакты</h2>
       <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-      <a href="map.html"><img src="" alt="Москва, улица строителей, дом 15"></a>
+      <a href="map.html"><img src="img/img-map-small.jpg" alt="Москва, улица строителей, дом 15" width="560" height="222"></a>
       <a href="write-us.html" class="btn write-btn">Напишите нам</a>
     </section>
   </main>
@@ -195,8 +195,8 @@
       <a class="main-footer-caption">Device</a>
       <ul class="login-navigation">
         <li class="login-navigation-item"><a class="login-link" href="#">Войти</a></li>
-        <li class="login-navigation-item" hidden><a class="profile-link" href="#">Валентин Петухов</a></li>
-        <li class="login-navigation-item" hidden><a class="logout-link" href="#">Выйти</a></li>
+        <li class="login-navigation-item hide"><a class="profile-link" href="#">Валентин Петухов</a></li>
+        <li class="login-navigation-item hide"><a class="logout-link" href="#">Выйти</a></li>
       </ul>
       <a href="#" class="compare">Сравнить</a>
       <a href="#" class="cart">Корзина</a>
@@ -209,7 +209,7 @@
         <li><a href="#">Гарантия</a></li>
         <li><a href="#">Контакты</a></li>
       </ul>
-      <a href="tel:+74954959595">+7 (495) 495-95-95</a>
+      <a href="tel:+74954959595">Тел.: +7 (495) 495-95-95</a>
     </div>
 
     <div class="footer-bottom">
@@ -218,7 +218,7 @@
         <li><a href="#" class="social-link"><span class="visually-hidden">Instagram</span></a></li>
         <li><a href="#" class="social-link"><span class="visually-hidden">Twitter</span></a></li>
       </ul>
-      <a href="#" class="academy-link"><img src="" alt="Html Academy"></a>
+      <a href="#" class="academy-link"><img src="img/logo-htmlacademy.svg" width="26.94" height="34.09" alt="Html Academy"></a>
     </div>
   </footer>
 
@@ -242,7 +242,7 @@
   </section>
 
   <section class="modal modal-map">
-    <a href="map.html"><img src="" alt="Москва, улица Строителей, дом 15"></a>
+    <a href="map.html"><img src="img/img-map-big.jpg" alt="Москва, улица Строителей, дом 15" width="960" height="559"></a>
     <button class="modal-close" type="button">Закрыть</button>
   </section>
     <script>document.write('<script src="http://'
