Сделал первичную стилизацию каталога

--- a/catalog.html
+++ b/catalog.html
@@ -28,7 +28,7 @@
         <ul class="site-navigation">
           <li class="catalog-hover">
             <a href="catalog.html">Каталог товаров</a>
-            <div class="catalog-list">
+            <div class="catalog-nav-list">
               <ul class="simple-devices">
                 <li><a href="#">Виртуальная реальность</a></li>
                 <li><a>Моноподы для селфи</a></li>
@@ -60,7 +60,7 @@
     </ul>
 
     <section class="filters">
-      <h2 class="visually-hidden">Фильтры</h2>
+      <h2>Фильтр</h2>
       <form class="filter" action="https://echo.htmlacademy.ru" method="get">
         <fieldset class="filter-item">
           <legend>Стоимость</legend>
@@ -105,12 +105,12 @@
           <legend>Bluetooth</legend>
           <ul>
             <li class="filter-option">
-              <input class="visually-hidden filter-input filter-input-radio" type="radio" name="bluetooth" value="yes" id="filter-bluetooth" checked>
-              <label for="filter-bluetooth">Есть</label>
+              <input class="visually-hidden filter-input filter-input-radio" type="radio" name="bluetooth" value="yes" id="filter-bluetooth-yes" checked>
+              <label for="filter-bluetooth-yes">Есть</label>
             </li>
             <li class="filter-option">
-              <input class="visually-hidden filter-input filter-input-radio" type="radio" name="bluetooth" value="no" id="filter-bluetooth">
-              <label for="filter-bluetooth">Нет</label>
+              <input class="visually-hidden filter-input filter-input-radio" type="radio" name="bluetooth" value="no" id="filter-bluetooth-no">
+              <label for="filter-bluetooth-no">Нет</label>
             </li>
           </ul>
         </fieldset>
@@ -142,9 +142,9 @@
     <section class="catalog">
       <h2 class="visually-hidden">Каталог селфи-палок</h2>
       <ul class="catalog-list">
-        <li class="catalog-list">
+        <li class="catalog-item">
           <p class="img-wrapper">
-            <img src="" alt="Любительская селфи-палка">
+            <img src="img/img-amateur-self-stick.jpg" alt="Любительская селфи-палка" width="360" height="380">
           </p>
           <h3>Любительская селфи-палка</h3>
           <span class="price">500 руб.</span>
@@ -153,9 +153,9 @@
             <a href="#" class="compare-btn">Добавить к сравнению</a>
           </div>
         </li>
-        <li class="catalog-list">
+        <li class="catalog-item">
           <p class="img-wrapper">
-            <img src="" alt="Профессиональная селфи-палка">
+            <img src="img/img-prof-selfy-stick.jpg" alt="Профессиональная селфи-палка" width="360" height="380">
           </p>
           <h3>Профессиональная селфи-палка</h3>
           <span class="price">1 500 руб.</span>
@@ -164,9 +164,9 @@
             <a href="#" class="compare-btn">Добавить к сравнению</a>
           </div>
         </li>
-        <li class="catalog-list">
+        <li class="catalog-item">
           <p class="img-wrapper">
-            <img src="" alt="Непотопляемая селфи-палка">
+            <img src="img/img-waterproof-selfy-stick.jpg" alt="Непотопляемая селфи-палка" width="360" height="380">
           </p>
           <h3>Непотопляемая селфи-палка</h3>
           <span class="price">2 500 руб.</span>
@@ -175,9 +175,9 @@
             <a href="#" class="compare-btn">Добавить к сравнению</a>
           </div>
         </li>
-        <li class="catalog-list">
+        <li class="catalog-item">
           <p class="img-wrapper">
-            <img src="" alt="Селфи-палка «Следуй за мной»">
+            <img src="img/img-unusual-selfy-stick.jpg" alt="Селфи-палка «Следуй за мной»" width="360" height="380">
           </p>
           <h3>Селфи-палка «Следуй за мной»</h3>
           <span class="price">4 900 руб.</span>
