--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <ul class="site-navigation">
           <li class="catalog-hover">
             <a href="#">Каталог товаров</a>
-            <div class="catalog-list">
+            <div class="catalog-nav-list">
               <ul class="simple-devices">
                 <li><a href="#">Виртуальная реальность</a></li>
                 <li><a href="catalog.html">Моноподы для селфи</a></li>
