Сделал стилизацию каталога

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-  <header class="main-header container">
+  <div class="container">
+  <header class="main-header">
     <a class="main-header-caption">Device</a>
     <div class="middle-header">
       <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
@@ -64,6 +65,7 @@
       </nav>
     </div>
   </header>
+  </div>
 
   <main>
     <h1 class="visually-hidden">Интернет-магазин Device</h1>
