--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,8 @@
   <link href="css/style.css" rel="stylesheet">
 </head>
 <body class="inner-page">
-  <header class="main-header container">
+  <div class="container">
+  <header class="main-header">
     <a class="main-header-caption" href="index.html">Device</a>
     <div class="middle-header">
       <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
@@ -64,152 +65,168 @@
       </nav>
     </div>
   </header>
+  </div>
 
   <main>
-    <h1 class="page-title">Моноподы для селфи</h1>
-    <ul class="breadcrumbs">
-      <li><a href="index.html">Главная</a></li>
-      <li><a href="#">Каталог товаров</a></li>
-      <li><a>Моноподы для селфи</a></li>
-    </ul>
-
-    <section class="filters">
-      <h2>Фильтр</h2>
-      <form class="filter" action="https://echo.htmlacademy.ru" method="get">
-        <fieldset class="filter-item">
-          <legend>Стоимость</legend>
-          <div class="range-filter">
-            <div class="scale">
-              <div class="bar"></div>
+    <div class="container">
+      <h1 class="page-title">Моноподы для селфи</h1>
+      <ul class="breadcrumbs">
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="#">Каталог товаров</a></li>
+        <li><a>Моноподы для селфи</a></li>
+      </ul>
+    </div>
+    <div class="two-columns container">
+      <section class="filters">
+        <h2>Фильтр:</h2>
+        <form class="filter" action="https://echo.htmlacademy.ru" method="get">
+          <fieldset class="filter-item">
+            <legend>Стоимость</legend>
+            <div class="range-filter">
+              <div class="scale">
+                <div class="bar"></div>
+              </div>
+              <div class="toggle toggle-min"></div>
+              <div class="toggle toggle-max"></div>
             </div>
-            <div class="toggle toggle-min"></div>
-            <div class="toggle toggle-max"></div>
-          </div>
-          <div class="price-controls">
-            <label class="min-price">от <input type="text" class="input-price-field" id="min-price-field" name="min-price" min="0" max="30000" value="0"></label>
-            <label class="max-price">до <input type="text" name="max-price" class="input-price-field" id="max-price-field" min="0" max="5000" value="5000"></label>
-          </div>
-        </fieldset>
-        <fieldset class="filter-item">
-          <legend>Цвет</legend>
-          <ul>
-            <li class="filter-option">
-              <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="black" id="filter-black" checked>
-              <label for="filter-black">Черный</label>
+            <div class="price-controls">
+              <label class="min-price">от <input type="text" class="input-price-field" id="min-price-field" name="min-price" min="0" max="30000" value="0"></label>
+              <label class="max-price">до <input type="text" name="max-price" class="input-price-field" id="max-price-field" min="0" max="5000" value="5000"></label>
+            </div>
+          </fieldset>
+          <fieldset class="filter-item">
+            <legend>Цвет</legend>
+            <ul>
+              <li class="filter-option">
+                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="black" id="filter-black" checked>
+                <label for="filter-black">Черный</label>
+              </li>
+              <li class="filter-option">
+                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="white" id="filter-white">
+                <label for="filter-white">Белый</label>
+              </li>
+              <li class="filter-option">
+                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="blue" id="filter-blue" checked>
+                <label for="filter-blue">Синий</label>
+              </li>
+              <li class="filter-option">
+                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="red" id="filter-red" checked>
+                <label for="filter-red">Красный</label>
+              </li>
+              <li class="filter-option">
+                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="pink" id="filter-pink">
+                <label for="filter-pink">Розовый</label>
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset class="filter-item">
+            <legend>Bluetooth</legend>
+            <ul>
+              <li class="filter-option">
+                <input class="visually-hidden filter-input filter-input-radio" type="radio" name="bluetooth" value="yes" id="filter-bluetooth-yes" checked>
+                <label for="filter-bluetooth-yes">Есть</label>
+              </li>
+              <li class="filter-option">
+                <input class="visually-hidden filter-input filter-input-radio" type="radio" name="bluetooth" value="no" id="filter-bluetooth-no">
+                <label for="filter-bluetooth-no">Нет</label>
+              </li>
+            </ul>
+          </fieldset>
+          <button class="btn filter-btn" type="submit">Показать</button>
+        </form>
+      </section>
+
+      <div class="catalog-container">
+        <section class="sort">
+          <h2>Сортировка:</h2>
+          <ul class="sort-list">
+            <li class="sort-current"><a>По цене</a></li>
+            <li><a href="#">По типу</a></li>
+            <li><a href="#">По популярности</a></li>
+          </ul>
+          <ul class="sort-arrows">
+            <li>
+              <a href="#">
+                <span class="visually-hidden">По возрастанию</span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10"><path fill="#231F20" d="M5.5 0L0 10h11z"/></svg>
+              </a>
             </li>
-            <li class="filter-option">
-              <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="white" id="filter-white">
-              <label for="filter-white">Белый</label>
-            </li>
-            <li class="filter-option">
-              <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="blue" id="filter-blue" checked>
-              <label for="filter-blue">Синий</label>
-            </li>
-            <li class="filter-option">
-              <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="red" id="filter-red" checked>
-              <label for="filter-red">Красный</label>
-            </li>
-            <li class="filter-option">
-              <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="pink" id="filter-pink">
-              <label for="filter-pink">Розовый</label>
+            <li class="sort-current">
+              <a>
+                <span class="visually-hidden">По убыванию</span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10"><path fill="#231F20" d="M5.5 10L0 0h11"/></svg>
+              </a>
             </li>
           </ul>
-        </fieldset>
-        <fieldset class="filter-item">
-          <legend>Bluetooth</legend>
-          <ul>
-            <li class="filter-option">
-              <input class="visually-hidden filter-input filter-input-radio" type="radio" name="bluetooth" value="yes" id="filter-bluetooth-yes" checked>
-              <label for="filter-bluetooth-yes">Есть</label>
+        </section>
+
+        <section class="catalog">
+          <h2 class="visually-hidden">Каталог селфи-палок</h2>
+          <ul class="catalog-list">
+            <li class="catalog-item">
+              <p class="img-wrapper">
+                <img src="img/img-amateur-self-stick.jpg" alt="Любительская селфи-палка" width="360" height="380">
+              </p>
+              <div class="info-wrapper">
+                <a href="#"><h3>Любительская селфи-палка</h3></a>
+                <span class="price">500 руб.</span>
+              </div>
+              <div class="btn-wrapper">
+                <a href="#" class="btn to-cart-btn">В корзину</a>
+                <a href="#" class="compare-btn">Добавить к сравнению</a>
+              </div>
             </li>
-            <li class="filter-option">
-              <input class="visually-hidden filter-input filter-input-radio" type="radio" name="bluetooth" value="no" id="filter-bluetooth-no">
-              <label for="filter-bluetooth-no">Нет</label>
+            <li class="catalog-item">
+              <p class="img-wrapper">
+                <img src="img/img-prof-selfy-stick.jpg" alt="Профессиональная селфи-палка" width="360" height="380">
+              </p>
+              <div class="info-wrapper">
+                <a href="#"><h3>Профессиональная селфи-палка</h3></a>
+                <span class="price">1 500 руб.</span>
+              </div>
+              <div class="btn-wrapper">
+                <a href="#" class="btn to-cart-btn">В корзину</a>
+                <a href="#" class="compare-btn">Добавить к сравнению</a>
+              </div>
+            </li>
+            <li class="catalog-item">
+              <p class="img-wrapper">
+                <img src="img/img-waterproof-selfy-stick.jpg" alt="Непотопляемая селфи-палка" width="360" height="380">
+              </p>
+              <div class="info-wrapper">
+                <a href="#"><h3>Непотопляемая селфи-палка</h3></a>
+                <span class="price">2 500 руб.</span>
+              </div>
+              <div class="btn-wrapper">
+                <a href="#" class="btn to-cart-btn">В корзину</a>
+                <a href="#" class="compare-btn">Добавить к сравнению</a>
+              </div>
+            </li>
+            <li class="catalog-item new">
+              <p class="img-wrapper">
+                <img src="img/img-unusual-selfy-stick.jpg" alt="Селфи-палка «Следуй за мной»" width="360" height="380">
+              </p>
+              <div class="info-wrapper">
+                <a href="#"><h3>Селфи-палка «Следуй за мной»</h3></a>
+                <span class="price">4 900 руб.</span>
+              </div>
+              <div class="btn-wrapper">
+                <a href="#" class="btn to-cart-btn">В корзину</a>
+                <a href="#" class="compare-btn">Добавить к сравнению</a>
+              </div>
             </li>
           </ul>
-        </fieldset>
-        <button class="btn filter-btn" type="submit">Показать</button>
-      </form>
-    </section>
 
-    <section class="sort">
-      <h2>Сортировка:</h2>
-      <ul class="sort-list">
-        <li class="sort-current"><a>По цене</a></li>
-        <li><a href="#">По типу</a></li>
-        <li><a href="#">По популярности</a></li>
-      </ul>
-      <ul class="sort-arrows">
-        <li>
-          <a href="#">
-            <span class="visually-hidden">По возрастанию</span>
-          </a>
-        </li>
-        <li class="sort-current">
-          <a>
-            <span class="visually-hidden">По убыванию</span>
-          </a>
-        </li>
-      </ul>
-    </section>
-
-    <section class="catalog">
-      <h2 class="visually-hidden">Каталог селфи-палок</h2>
-      <ul class="catalog-list">
-        <li class="catalog-item">
-          <p class="img-wrapper">
-            <img src="img/img-amateur-self-stick.jpg" alt="Любительская селфи-палка" width="360" height="380">
-          </p>
-          <h3>Любительская селфи-палка</h3>
-          <span class="price">500 руб.</span>
-          <div class="btn-wrapper">
-            <a href="#" class="btn to-cart-btn">В корзину</a>
-            <a href="#" class="compare-btn">Добавить к сравнению</a>
-          </div>
-        </li>
-        <li class="catalog-item">
-          <p class="img-wrapper">
-            <img src="img/img-prof-selfy-stick.jpg" alt="Профессиональная селфи-палка" width="360" height="380">
-          </p>
-          <h3>Профессиональная селфи-палка</h3>
-          <span class="price">1 500 руб.</span>
-          <div class="btn-wrapper">
-            <a href="#" class="btn to-cart-btn">В корзину</a>
-            <a href="#" class="compare-btn">Добавить к сравнению</a>
-          </div>
-        </li>
-        <li class="catalog-item">
-          <p class="img-wrapper">
-            <img src="img/img-waterproof-selfy-stick.jpg" alt="Непотопляемая селфи-палка" width="360" height="380">
-          </p>
-          <h3>Непотопляемая селфи-палка</h3>
-          <span class="price">2 500 руб.</span>
-          <div class="btn-wrapper">
-            <a href="#" class="btn to-cart-btn">В корзину</a>
-            <a href="#" class="compare-btn">Добавить к сравнению</a>
-          </div>
-        </li>
-        <li class="catalog-item">
-          <p class="img-wrapper">
-            <img src="img/img-unusual-selfy-stick.jpg" alt="Селфи-палка «Следуй за мной»" width="360" height="380">
-          </p>
-          <h3>Селфи-палка «Следуй за мной»</h3>
-          <span class="price">4 900 руб.</span>
-          <div class="btn-wrapper">
-            <a href="#" class="btn to-cart-btn">В корзину</a>
-            <a href="#" class="compare-btn">Добавить к сравнению</a>
-          </div>
-        </li>
-      </ul>
-
-      <ul class="pagination-list">
-        <li class="pagination-item pagination-item-back"><a href="#">Назад</a></li>
-        <li class="pagination-item pagination-item-current"><a>1</a></li>
-        <li class="pagination-item"><a href="#">2</a></li>
-        <li class="pagination-item"><a href="#">3</a></li>
-        <li class="pagination-item pagination-item-next"><a href="#">Вперед</a></li>
-      </ul>
-    </section>
+          <ul class="pagination-list">
+            <li class="pagination-item pagination-item-back"><a href="#">Назад</a></li>
+            <li class="pagination-item pagination-item-current"><a>1</a></li>
+            <li class="pagination-item"><a href="#">2</a></li>
+            <li class="pagination-item"><a href="#">3</a></li>
+            <li class="pagination-item pagination-item-next"><a href="#">Вперед</a></li>
+          </ul>
+        </section>
+      </div>
+    </div>
   </main>
 
   <footer class="main-footer">
@@ -259,9 +276,9 @@
       </div>
     </div>
   </footer>
-    <script>document.write('<script src="http://'
+  <script>document.write('<script src="http://'
     + (location.host || 'localhost').split(':')[0]
     + ':35729/livereload.js?snipver=1"></'
     + 'script>')</script>
-</body>
-</html>
+  </body>
+  </html>
